# Project_2

./: .gitignore  Note.txt  README.md
Doc/: Final_Report.docx  Model.docx  Report_Tuan2.docx  cac-khoi.drawio  event-group.drawio  mo-hinh.drawio  mutex.drawio  onoff_client.txt  onoff_server.txt  provisioner.drawio  queue.drawio  so-do-khoi.drawio  test.drawio  ~$nal_Report.docx  ~$port_Tuan2.docx  ~WRL1274.tmp  ~WRL1952.tmp  ~WRL2152.tmp  ~WRL3371.tmp
Firmware/: Note.txt
Firmware/gateway/: Makefile  README.md  note.txt  partitions4M.csv
Firmware/gateway_ble_mesh/main/: CMakeLists.txt  app_main.c  app_main.h  app_main_test.c  ble_mesh.h  button.h  firm_ota.h  fota.c  led.h  main.c  main.h  mesh_client_user.h  mesh_provisioner.h  mqtt.h  nvs_user.c  nvs_user.h  smartconfig.h  spiffs_user.c  spiffs_user.h  webserver_user.h  wifi_sta.c  wifi_sta.h
Firmware/gateway_v2/: CMakeLists.txt  Makefile
Firmware/gatt_client/: README.md  sdkconfig.defaults.esp32
Firmware/gatt_server/: README.md
Firmware/hub_ble/: CMakeLists.txt  Makefile  Project_2.drawio
Firmware/node_ble/: CMakeLists.txt  Makefile  note.txt
Firmware/provisioner/: CMakeLists.txt  Makefile
Firmware/switch_ble_mesh/: partitions4M.csv
Firmware/touch_pad/: CMakeLists.txt  Makefile
Hardware/Gateway/: ES8388.SchDoc  ESP32.SchDoc  Gateway.PrjPcb  Gateway.PrjPcbStructure  GatewayV1.PcbDoc  Power.SchDoc
Hardware/GatewayV2/: ESP32.SchDoc  GatewayV2.PrjPcb  Power.SchDoc
Hardware/SmartSwitchV3/: SmartSwitchV3.PcbDoc  SmartSwitchV3.PrjPcb  SmartSwitchV3.PrjPcbStructure  SmartSwitchV3.SchDoc
(+125 files in other folders)
